--- a/application.yml
+++ b/application.yml
@@ -1,10 +1,8 @@
 profile=profile-default
-server:
-  port: 8000
-spring:
-  cloud:
-    config:
-      server:
-        git:
-          uri: https://github.com/alanchanchn/spring-cloud-config.git
-#          file:///D:/workspace/springcloud/config/git/config-server
+@SpringBootApplication
+@EnableConfigServer
+public class App {
+	public static void main(String[] args) {
+		SpringApplication.run(App.class, args);
+	}
+}
